reddit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-deployment  
  labels:
    app: reddit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reddit-app
  template:
    metadata:
      labels:
        app: reddit-app
    spec:
      containers:
      - name: reddit-app
        image: pradipkv/reddit_app
        ports:
        - containerPort: 3000
