reddit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddit-app-ingress
spec:
  rules:
  - host: "domain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: reddit-app-service   # Service name
            port:
              number: 3000
  - host: "*.domain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: reddit-app-service   # Service name
            port:
              number: 3000
